test/asm/macro-syntax.err
error: macro-syntax.asm(7):
    Label "old" created outside of a SECTION
error: macro-syntax.asm(7):
    syntax error, unexpected MACRO
error: macro-syntax.asm(8):
    Macro argument '\1' not defined
error: macro-syntax.asm(9):
    syntax error, unexpected ENDM
error: Assembly aborted (4 errors)!
